force-app/main/default/objects/Margin__c/Margin__c.object-meta.xml
<CustomObject>
    <label>Margin</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Margin Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Margins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>