force-app/main/default/objects/Margin__c/fields/AGO_CH_Sales_Margin__c.field-meta.xml
<CustomField>
    <fullName>AGO_CH_Sales_Margin__c</fullName>
    <label>AGO-CH Sales Margin(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>