force-app/main/default/objects/Margin__c/fields/Fixed_Surcharge_GTL_B0__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Surcharge_GTL_B0__c</fullName>
    <label>Fixed Surcharge GTL B0(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>