force-app/main/default/objects/Margin__c/fields/IGO_1000_Sales_Margin__c.field-meta.xml
<CustomField>
    <fullName>IGO_1000_Sales_Margin__c</fullName>
    <label>IGO-1000 Sales Margin(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>