force-app/main/default/objects/Margin__c/fields/IGO_50_Sales_Margin__c.field-meta.xml
<CustomField>
    <fullName>IGO_50_Sales_Margin__c</fullName>
    <label>IGO-50 Sales Margin(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>