force-app/main/default/objects/Margin__c/fields/Margin_Type__c.field-meta.xml
<CustomField>
    <fullName>Margin_Type__c</fullName>
    <label>Margin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUCK/ITT</fullName>
            </value>
            <value>
                <fullName>MASSIVE MEANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>