force-app/main/default/objects/Margin__c/fields/MarginKey__c.field-meta.xml
<CustomField>
    <fullName>MarginKey__c</fullName>
    <formula>TEXT(Margin_Type__c) +&apos;-&apos;+ TEXT(Sales_Org__c) +&apos;-&apos;+ Plant_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MarginKey</label>
    <type>Text</type>
</CustomField>