force-app/main/default/objects/Margin__c/fields/Min_Mgn_GTL_B7__c.field-meta.xml
<CustomField>
    <fullName>Min_Mgn_GTL_B7__c</fullName>
    <label>Min Mgn GTL B7(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>