force-app/main/default/objects/Margin__c/fields/Min_Mgn_IGO_50ppm__c.field-meta.xml
<CustomField>
    <fullName>Min_Mgn_IGO_50ppm__c</fullName>
    <label>Min Mgn IGO 50ppm(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>