force-app/main/default/objects/Margin__c/fields/Min_Mgn_ULG95_E5__c.field-meta.xml
<CustomField>
    <fullName>Min_Mgn_ULG95_E5__c</fullName>
    <label>Min Mgn ULG95 E5(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>