force-app/main/default/objects/Margin__c/fields/MOGAS_BOB10_Sales_Margin__c.field-meta.xml
<CustomField>
    <fullName>MOGAS_BOB10_Sales_Margin__c</fullName>
    <label>MOGAS-BOB10 Sales Margin(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>