force-app/main/default/objects/Margin__c/fields/Night_Surcharge_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Night_Surcharge_End_Time__c</fullName>
    <defaultValue>TIMEVALUE(&quot;10:0:0.0&quot;)</defaultValue>
    <label>Night Surcharge End Time</label>
    <type>Time</type>
</CustomField>