force-app/main/default/objects/Margin__c/fields/Night_Surcharge_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Night_Surcharge_Start_Time__c</fullName>
    <defaultValue>TIMEVALUE(&quot;20:00:00.0&quot;)</defaultValue>
    <label>Night Surcharge Start Time</label>
    <type>Time</type>
</CustomField>