force-app/main/default/objects/Margin__c/fields/Night_Surcharges_GTL_B7__c.field-meta.xml
<CustomField>
    <fullName>Night_Surcharges_GTL_B7__c</fullName>
    <label>Night Surcharges GTL B7(Eur/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>