force-app/main/default/objects/Margin__c/fields/Night_Surcharges_ULG95_E5_Eur_100L__c.field-meta.xml
<CustomField>
    <fullName>Night_Surcharges_ULG95_E5_Eur_100L__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Night Surcharges ULG95 E5 (Eur/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>