force-app/main/default/objects/Margin__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Margins</relationshipLabel>
    <relationshipName>Margins</relationshipName>
    <type>Lookup</type>
</CustomField>