force-app/main/default/objects/Margin__c/fields/Sales_Mgn_IGO_50ppm__c.field-meta.xml
<CustomField>
    <fullName>Sales_Mgn_IGO_50ppm__c</fullName>
    <label>Sales Mgn IGO 50ppm(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>