force-app/main/default/objects/Margin__c/fields/Sales_Mgn_ULG95_E5__c.field-meta.xml
<CustomField>
    <fullName>Sales_Mgn_ULG95_E5__c</fullName>
    <label>Sales Mgn ULG95 E5(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>