force-app/main/default/objects/Margin__c/fields/SalesOrgPlantCodeMot__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgPlantCodeMot__c</fullName>
    <formula>TEXT(Sales_Org__c)+ Plant_Code__c + TEXT( Margin_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesOrgPlantCodeMot</label>
    <type>Text</type>
</CustomField>