force-app/main/default/objects/Margin__c/fields/Target_Mgn_AGO_B7__c.field-meta.xml
<CustomField>
    <fullName>Target_Mgn_AGO_B7__c</fullName>
    <formula>Min_Mgn_AGO_B7__c + Sales_Mgn_AGO_B7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Mgn AGO B7(Euro/100L)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>