force-app/main/default/objects/Margin__c/fields/Target_Mgn_IGO_50ppm__c.field-meta.xml
<CustomField>
    <fullName>Target_Mgn_IGO_50ppm__c</fullName>
    <formula>Min_Mgn_IGO_50ppm__c + Sales_Mgn_IGO_50ppm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Mgn IGO 50ppm(Euro/100L)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>