force-app/main/default/objects/Margin__c/fields/Target_Mgn_ULG95_E5__c.field-meta.xml
<CustomField>
    <fullName>Target_Mgn_ULG95_E5__c</fullName>
    <formula>Min_Mgn_ULG95_E5__c + Sales_Mgn_ULG95_E5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Mgn ULG95 E5(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>