force-app/main/default/objects/Margin__c/recordTypes/Massive_Means.recordType-meta.xml
<RecordType>
    <fullName>Massive_Means</fullName>
    <active>true</active>
    <label>Massive Means</label>
</RecordType>