force-app/main/default/objects/Margin__c/recordTypes/Truck_ITT.recordType-meta.xml
<RecordType>
    <fullName>Truck_ITT</fullName>
    <active>true</active>
    <label>Truck/ITT</label>
</RecordType>