force-app/main/default/objects/Margin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SalesOrgPlantCodeMot__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Margin_Type__c</columns>
    <columns>Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>