force-app/main/default/objects/Margin__c/listViews/All_SOM.listView-meta.xml
<ListView>
    <fullName>All_SOM</fullName>
    <columns>NAME</columns>
    <columns>Tranche__c</columns>
    <columns>SalesOrgPlantCodeMot__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Margin_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Default__c</columns>
    <columns>Fixed_Surcharge_GTL_B0__c</columns>
    <columns>Min_Mgn_IGO_50ppm__c</columns>
    <columns>Night_Surcharges_ULG95_E5_Eur_100L__c</columns>
    <columns>Night_Surcharges_AGO_B7_Eur_100L__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plant_Code__c</field>
        <operation>equals</operation>
        <value>D038</value>
    </filters>
    <label>All (SOM)</label>
</ListView>